Fix<Mysql>: Fix mysql extra error

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -73,6 +73,9 @@ logging:
             security:
               servlet:
                 UserDetailsServiceAutoConfiguration: TRACE
+        devtools:
+          restart:
+            ChangeableUrls: WARN
 
 sa-token:
   token-name: talex
