--- a/pom.xml
+++ b/pom.xml
@@ -230,6 +230,16 @@
             <artifactId>druid</artifactId>
             <version>1.2.8</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>13.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
